# VMSpoofer

./: .gitmodules  CMakeLists.txt  README.md  filegatherer.ps1  registrygatherer.py  vcpkg.json
VMDiscovery/: main.cpp
decoy/: main.c
src/: main.cpp
src/VMs/: Bootstrap.cpp  Bootstrap.hpp  VM.hpp  VMManager.hpp
src/VMs/Proxmox/: Proxmox.cpp  Proxmox.hpp
src/VMs/Qemu/: Qemu.cpp  Qemu.hpp
src/VMs/VMWare/: VMWare.cpp  VMWare.hpp
src/VMs/VSphere/: VSphere.cpp  VSphere.hpp
src/VMs/VirtualBox/: VirtualBox.cpp  VirtualBox.hpp
src/gui/: CLI.cpp  CLI.hpp  GUI.cpp  GUI.hpp
src/utils/VMs/VMWare/: VMWare.cpp  VMWare.hpp
src/utils/VMs/VirtualBox/: VirtualBox.hpp
src/utils/common/: colors.cpp  colors.hpp  logging.cpp  logging.hpp  parser.cpp  parser.hpp
src/utils/registry/: Registry.cpp  Registry.hpp  RegistryException.hpp
src/utils/windows/: admin.cpp  admin.hpp  winutils.cpp  winutils.hpp
